SERVER-68065 Cannot update unindexed field in QE